# partiql-lang-rust

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  about.toml  deny.toml  design_doc_toc.md  final_design.md  hybrid_design_reuse.md  hybrid_design_row_view.md
extension/partiql-extension-csv/: Cargo.toml
extension/partiql-extension-csv/src/: lib.rs
extension/partiql-extension-csv/tests/: scan.rs
extension/partiql-extension-ddl/: Cargo.toml
extension/partiql-extension-ddl/src/: ddl.rs  lib.rs
extension/partiql-extension-ddl/tests/: ddl-tests.rs
extension/partiql-extension-ion/: Cargo.toml
extension/partiql-extension-ion-functions/: Cargo.toml
extension/partiql-extension-ion-functions/src/: buffer.rs  lib.rs  read_ion.rs  scan_ion.rs
extension/partiql-extension-ion-functions/tests/: scan.rs
extension/partiql-extension-ion/src/: boxed_ion.rs  common.rs  decode.rs  embedded.rs  encode.rs  lib.rs  util.rs
extension/partiql-extension-ion/tests/: test.rs
partiql/: Cargo.toml
partiql-ast/: Cargo.toml
partiql-ast-passes/: Cargo.toml
partiql-ast-passes/src/: error.rs  lib.rs  name_resolver.rs  partiql_typer.rs  static_typer.rs
partiql-ast/partiql-ast-macros/: Cargo.toml
partiql-ast/partiql-ast-macros/src/: lib.rs
partiql-ast/src/: ast.rs  builder.rs  lib.rs  pretty.rs  visit.rs
partiql-ast/src/ast/: graph.rs  mod.rs
partiql-ast/src/experimental/: ast.rs
partiql-ast/src/pretty/: graph.rs  mod.rs
partiql-ast/tests/: common.rs  pretty.rs  test_ast.rs
partiql-ast/tests/snapshots/: pretty__pretty2.snap  pretty__pretty_case_1.snap  pretty__pretty_from_comma.snap  pretty__pretty_join.snap  pretty__pretty_kw_fn2.snap  pretty__pretty_pivot.snap
partiql-benchmarks/: BENCH_CONFIG.md  Cargo.toml  README.md
partiql-benchmarks/benches/: engine_comparison.rs  simple_comparison.rs
partiql-catalog/: Cargo.toml
partiql-catalog/src/: builtins.rs  call_defs.rs  catalog.rs  context.rs  extension.rs  lib.rs  scalar_fn.rs  table_fn.rs
partiql-cli/: Cargo.toml  README.md
partiql-cli/src/: args.rs  error.rs  lib.rs  main.rs  repl.rs
partiql-cli/src/visualize/: ast_to_dot.rs  mod.rs  render.rs
partiql-common/: Cargo.toml
partiql-common/src/: catalog.rs  embedded_document.rs  lib.rs  metadata.rs  node.rs  pretty.rs
partiql-common/src/srcmap/: location.rs
partiql-common/src/syntax/: line_offset_tracker.rs  location.rs  metadata.rs  mod.rs
partiql-conformance-test-generator/: Cargo.toml
partiql-conformance-test-generator/src/: generator.rs  lib.rs  reader.rs  schema.rs  util.rs  writer.rs
partiql-conformance-tests/: .gitignore  Cargo.toml  README.md  backup_conformance_report.json  build.rs
partiql-conformance-tests/tests/: fail_parse_select-from-where.rs  mod.rs  partiql_tests_partiql_test_data_fail_parser_select_select_from_where.rs  partiql_tests_partiql_test_data_pass_parser_primitives_literal.rs  partiql_tests_partiql_test_data_pass_parser_select_select_from_where.rs  pass_parse_literal.rs  pass_parse_select-from-where.rs  test_value.rs
partiql-core/: Cargo.toml
partiql-core/src/: lib.rs  location.rs
partiql-eval/: Cargo.toml
partiql-eval-vectorized/: .gitignore  APPROACH_2_EXAMPLE.md  Cargo.toml  ION_READER_OPTIMIZATION.md  PROFILING.md  README.md  README_PROFILING.md  SELECTION_VECTOR_FIX.md  compiler_reader_integration.md  poc_plan.md  programmatic_compilation.md
partiql-eval-vectorized/examples/: arrow_reader_test.rs  ion_reader_test.rs  parquet_reader_test.rs  tuple_reader_test.rs
partiql-eval-vectorized/scripts/: generate_all_data.sh
partiql-eval-vectorized/src/: error.rs  lib.rs
partiql-eval-vectorized/tests/: reader_tests.rs
partiql-eval/benches/: bench_eval.rs
partiql-eval/src/: env.rs  error.rs  eval.rs  lib.rs  pattern_match.rs  plan.rs  test_value.rs
partiql-eval/src/engine/: catalog.rs  (+8 more)
partiql-logical/: Cargo.toml
partiql-logical-planner/: Cargo.toml
partiql-logical-planner/src/: builtins.rs  call_defs.rs  error.rs  functions.rs  graph.rs  lib.rs  lower.rs  name_resolver.rs  typer.rs
partiql-logical/src/: graph.rs  lib.rs  util.rs
partiql-parser/: Cargo.toml  build.rs
partiql-parser/benches/: bench_parse.rs
partiql-parser/fuzz/: Cargo.toml  README.md
partiql-parser/src/: error.rs  lexer.rs  lib.rs  location.rs  partiql.pest  peg.rs  prelude.rs  preprocessor.rs  result.rs  scanner.rs  token_parser.rs
partiql-perf/: Cargo.toml
partiql-perf/benches/: README.md  simple_comparison.rs
partiql-perf/scripts/: generate_all_data.sh
partiql-playground/: Cargo.toml  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json
partiql-playground/css/: jquery.json-viewer.css  partiql-playground.css
partiql-playground/src/: index.html  lib.rs  server.ts
partiql-py/: Cargo.toml  pyproject.toml  test.py
partiql-py/src/: lib.rs
partiql-rewriter/: Cargo.toml
partiql-rewriter/benches/: bench_pattern_match.rs
partiql-rewriter/src/: lib.rs  pattern_match.rs
partiql-source-map/: Cargo.toml
partiql-source-map/src/: lib.rs  line_offset_tracker.rs  location.rs  metadata.rs
partiql-tools/: .gitignore  Cargo.toml  PROFILING.md  profile.sh
partiql-tools/scripts/: generate_all_data.sh  generate_flamegraphs.sh
partiql-tools/src/: common.rs  lib.rs
partiql-types/: Cargo.toml
partiql-types/src/: lib.rs
partiql-value/: Cargo.toml
partiql-value/src/: bag.rs  bindings.rs  boxed_variant.rs  comparison.rs  datetime.rs  datum.rs  embedded_doc.rs  embedded_document.rs  graph.rs  ion.rs  lib.rs  list.rs  pretty.rs  sort.rs  time.rs  tuple.rs  util.rs  value.rs  variant.rs
partiql-visualize-dot/: Cargo.toml
partiql-visualize-dot/src/: ast_to_dot.rs  common.rs
partiql/benches/: bench_agg.rs  bench_eval_multi_like.rs  bench_eval_multi_like_iai.rs  bench_join.rs  multi_like_data.rs
partiql/src/: lib.rs  subquery_tests.rs
partiql/tests/: common.rs  comparisons.rs  extension_error.rs  graph.rs  ion.rs  pretty.rs  queries.rs  tuple_ops.rs  user_context.rs
pest-ion/: Cargo.toml  README.md
pest-ion/src/: lib.rs  result.rs
pest-ion/tests/: cli.rs
(+344 files in other folders)
