[workspace.package]
authors = ["PartiQL Team <partiql-team@amazon.com>"]
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
version = "0.10.1"
edition = "2021"

[workspace]
resolver = "2"

members = [
    "partiql",
    "partiql-ast",
    "partiql-ast/partiql-ast-macros",
    "partiql-ast-passes",
    "partiql-catalog",
    "partiql-conformance-tests",
    "partiql-conformance-test-generator",
    "partiql-source-map",
    "partiql-logical-planner",
    "partiql-logical",
    "partiql-eval",
    "partiql-ir",
    "partiql-irgen",
    "partiql-parser",
    "partiql-rewriter",
    "partiql-types",
    "partiql-value",
    "extension/partiql-extension-ddl",
    "extension/partiql-extension-ion",
    "extension/partiql-extension-ion-functions",
    "extension/partiql-extension-visualize",
]

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.bench]
debug = true
lto = true
