[workspace.package]
authors = ["PartiQL Team <partiql-team@amazon.com>"]
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
version = "0.14.0"
edition = "2021"
rust-version = "1.86.0"

[workspace]
resolver = "2"

members = [
    "partiql",
    "partiql-ast",
    "partiql-ast/partiql-ast-macros",
    "partiql-ast-passes",
    "partiql-catalog",
    "partiql-conformance-tests",
    "partiql-conformance-test-generator",
    "partiql-common",
    "partiql-logical-planner",
    "partiql-logical",
    "partiql-eval",
    "partiql-ir",
    "partiql-irgen",
    "partiql-parser",
    "partiql-rewriter",
    "partiql-types",
    "partiql-value",
    "extension/partiql-extension-ddl",
    "extension/partiql-extension-ion",
    "extension/partiql-extension-ion-functions",
    "extension/partiql-extension-value-functions",
    "extension/partiql-extension-visualize",
    "extension/partiql-extension-csv",
    "partiql-eval-vectorized",
    "partiql-perf",
    "partiql-benchmarks",
]

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
