[package]
name = "partiql-ast-passes"
description = "A crate for PartiQL AST transformation passes"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "compilers", "visitors", "passes"]
categories = ["database", "compilers"]
exclude = [
  "**/.git/**",
  "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
partiql-ast = { path = "../partiql-ast", version = "0.10.*" }
partiql-catalog = { path = "../partiql-catalog", version = "0.10.*" }
partiql-common = { path = "../partiql-common", version = "0.10.*" }
partiql-types = { path = "../partiql-types", version = "0.10.*" }

assert_matches = "1.5.*"
fnv = "1"
indexmap = "2.2"
thiserror = "1.0"

[dev-dependencies]
partiql-parser = { path = "../partiql-parser", version = "0.10.*" }

[features]
default = []
