[package]
name = "partiql-ast"
description = "PartiQL AST"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "ast-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
rust_decimal = { version = "1.25.0", default-features = false, features = ["std"] }
partiql-types = { path = "../partiql-types", version = "0.3.*" }

serde = { version = "1.*", features = ["derive"], optional = true }


[dev-dependencies]


[features]
default = []
serde = [
  "dep:serde",
  "rust_decimal/serde-with-str",
  "rust_decimal/serde"
]

[dependencies.partiql-ast-macros]
path = "partiql-ast-macros"
version = "0.3.*"
