[package]
name = "partiql-ast"
description = "PartiQL AST"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.11.*" }
indexmap = "2"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }
pretty = "0.12"
thiserror = "1.0"

[features]
default = []
serde = [
    "dep:serde",
    "rust_decimal/serde-with-str",
    "rust_decimal/serde",
    "indexmap/serde",
    "partiql-common/serde"
]

[dependencies.partiql-ast-macros]
path = "partiql-ast-macros"
version = "0.11.*"
