[package]
name = "partiql-benchmarks"
version = "0.1.0"
edition = "2021"

[lib]
name = "partiql_benchmarks"
path = "src/lib.rs"

[profile.bench]
debug = true

[[bench]]
name = "simple_comparison"
harness = false

[[bench]]
name = "engine_comparison"
harness = false

[dependencies]
# Dependencies from common.rs
ion-rs = "0.18.1"
arrow = "53.0"
arrow-array = "53.0"
arrow-ipc = "53.0"
parquet = "53.0"
indexmap = "2"

# PartiQL crates
partiql-ast-passes = { path = "../partiql-ast-passes" }
partiql-catalog = { path = "../partiql-catalog" }
partiql-eval = { path = "../partiql-eval" }
partiql-eval-vectorized = { path = "../partiql-eval-vectorized" }
partiql-extension-ion = { path = "../extension/partiql-extension-ion" }
partiql-logical = { path = "../partiql-logical" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-parser = { path = "../partiql-parser" }
partiql-types = { path = "../partiql-types" }
partiql-value = { path = "../partiql-value" }

[dev-dependencies]
criterion = "0.5"
