[package]
name = "partiql-catalog"
description = "PartiQL Catalog Definitions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.10.*" }
partiql-value = { path = "../partiql-value", version = "0.10.*" }
partiql-logical = { path = "../partiql-logical", version = "0.10.*" }
partiql-types = { path = "../partiql-types", version = "0.10.*" }

thiserror = "1.0"
ordered-float = "4"
itertools = "0.13"
unicase = "2.7"

dyn-clone = "1"
