[package]
name = "partiql-catalog"
description = "PartiQL Catalog Definitions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.13.*" }
partiql-value = { path = "../partiql-value", version = "0.13.*" }
partiql-logical = { path = "../partiql-logical", version = "0.13.*" }
partiql-types = { path = "../partiql-types", version = "0.13.*" }

thiserror = "1.0"
ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
rustc-hash = "2"
delegate = "0.13"
dyn-clone = "1"
