[package]
name = "partiql-cli"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL CLI"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2021"
version = "0.0.0"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "partiql-cli"
test = false
bench = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.2"
syntect = "5.0"
owo-colors = "3.4.0"
supports-color = "1.3.0"
supports-unicode = "1.0.2"
supports-hyperlinks = "1.2.0"
termbg = "0.4.1"
shellexpand = "2.1.0"
partiql-parser = { path = "../partiql-parser" }
partiql-source-map = { path = "../partiql-source-map" }
partiql-ast = { path = "../partiql-ast" }


thiserror = "1.0.31"
miette = { version ="4.7.1", features = ["fancy"] }


tui = "0.18.0"
crossterm = "0.23.2"