[package]
name = "partiql-cli"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL CLI"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2021"
version = "0.0.0"

[workspace]

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "partiql-cli"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partiql-parser = { path = "../partiql-parser" }
partiql-source-map = { path = "../partiql-source-map" }
partiql-ast = { path = "../partiql-ast" }


rustyline = "9.1.2"
syntect = "5.0"
owo-colors = "3.4.0"
supports-color = "1.3.0"
supports-unicode = "1.0.2"
supports-hyperlinks = "1.2.0"
termbg = "0.4.1"
shellexpand = "2.1.0"


thiserror = "1.0.31"
miette = { version ="4.7.1", features = ["fancy"] }
clap = { version = "3.2.13", features = ["derive"] }

# serde
serde = { version ="1.*", features = ["derive"], optional = true }
serde_json = { version ="1.*", optional = true }

### Dependencies for the `render` feature
viuer = { version ="0.6.1", features = ["sixel"], optional = true }
image = { version ="0.24.2", optional = true }
graphviz-sys = { version ="0.1.3", optional = true }
resvg = { version ="0.23.0", optional = true }
usvg = { version ="0.23.0", optional = true }
tiny-skia = { version ="0.6.6", optional = true }
strum = { version ="0.24.1", features = ["derive"], optional = true }
dot-writer = { version = "~0.1.2", optional = true }



[features]
default = []
serde = [
  "dep:serde",
  "dep:serde_json",
  "partiql-parser/serde",
  "partiql-source-map/serde",
  "partiql-ast/serde",
]
visualize = [
  "serde",
  "dep:viuer",
  "dep:image",
  "dep:graphviz-sys",
  "dep:resvg",
  "dep:usvg",
  "dep:tiny-skia",
  "dep:strum",
  "dep:dot-writer",
]
