[package]
name = "partiql-cli"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL CLI"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "cli"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2021"
version = "0.1.0"

[workspace]

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "partiql-cli"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partiql-parser = { path = "../partiql-parser", version = "0.1.0" }
partiql-source-map = { path = "../partiql-source-map", version = "0.1.0" }
partiql-ast = { path = "../partiql-ast", version = "0.1.0" }


rustyline = "10.*"
syntect = "5.*"
owo-colors = "3.*"
supports-color = "1.*"
supports-unicode = "1.*"
supports-hyperlinks = "1.*"
termbg = "0.4.*"
shellexpand = "2.*"


thiserror = "1.*"
miette = { version ="5.*", features = ["fancy"] }
clap = { version = "3.*", features = ["derive"] }

# serde
serde = { version ="1.*", features = ["derive"], optional = true }
serde_json = { version ="1.*", optional = true }

### Dependencies for the `render` feature
viuer = { version ="0.6.*", features = ["sixel"], optional = true }
image = { version ="0.24.*", optional = true }
graphviz-sys = { version ="0.1.3", optional = true }
resvg = { version ="0.23.*", optional = true }
usvg = { version ="0.23.*", optional = true }
tiny-skia = { version ="0.6.*", optional = true }
strum = { version ="0.24.*", features = ["derive"], optional = true }
dot-writer = { version = "0.1.*", optional = true }



[features]
default = []
serde = [
  "dep:serde",
  "dep:serde_json",
  "partiql-parser/serde",
  "partiql-source-map/serde",
  "partiql-ast/serde",
]
visualize = [
  "serde",
  "dep:viuer",
  "dep:image",
  "dep:graphviz-sys",
  "dep:resvg",
  "dep:usvg",
  "dep:tiny-skia",
  "dep:strum",
  "dep:dot-writer",
]
