[package]
name = "partiql-common"
description = "PartiQL Core"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
indexmap = "2.5"
pretty = "0.12"
serde = { version = "1", features = ["derive"], optional = true }
rust_decimal = { version = "1.36", default-features = false, features = ["std"] }
smallvec = { version = "1" }
thiserror = "1"

dyn-clone = "1"
dyn-hash = "0.2"
typetag = "0.2"

[features]
default = []
serde = [
    "dep:serde",
    "indexmap/serde",
    "smallvec/serde"
]
