[package]
name = "partiql-conformance-test-generator"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL conformance test generator"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "conformance", "codegen", "tests"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version = "0.1.0"
edition = "2021"

# TODO: fill in other details

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
ion-rs = "0.14.*"
codegen = "0.2.*"
Inflector = "0.11.4"
miette = "5.*"
thiserror = "1.*"