[package]
name = "partiql-conformance-test-generator"
description = "PartiQL conformance test generator"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "conformance", "codegen", "tests"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
walkdir = "2.3"
ion-rs = "0.14.*"
codegen = "0.2.*"
Inflector = "0.11.*"
miette = "5.*"
thiserror = "1.*"
quote = "1.*"