[package]
name = "partiql-conformance-tests"
description = "PartiQL conformance test runner"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "conformance", "compilers", "tests"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[[bin]]
name = "generate_comparison_report"
required-features = ["report_tool"]

[[bin]]
name = "generate_cts_report"
required-features = ["report_tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
miette = { version ="5.*", features = ["fancy"] }
partiql-conformance-test-generator = { path = "../partiql-conformance-test-generator" }

[dependencies]
partiql-parser = { path = "../partiql-parser" }
partiql-ast = { path = "../partiql-ast" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-logical = { path = "../partiql-logical" }
partiql-value = { path = "../partiql-value" }
partiql-eval = { path = "../partiql-eval" }

ion-rs = "0.14"

rust_decimal = "1.27"

serde = { version = "1.*", features = ["derive"], optional = true }
serde_json = { version = "1.*", optional = true }

[features]
default = []
conformance_test=[]
report_tool = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
