[package]
name = "partiql-conformance-tests"
description = "PartiQL conformance test runner"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "conformance", "compilers", "tests"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[[bin]]
name = "generate_comparison_report"
required-features = ["report_tool"]
bench = false

[[bin]]
name = "generate_cts_report"
required-features = ["report_tool"]
bench = false

[build-dependencies]
miette = { version ="5.*", features = ["fancy"] }
partiql-conformance-test-generator = { path = "../partiql-conformance-test-generator", version = "0.3.*" }

[dependencies]
partiql-parser = { path = "../partiql-parser", version = "0.3.*" }
partiql-ast = { path = "../partiql-ast", version = "0.3.*" }
partiql-logical-planner = { path = "../partiql-logical-planner", version = "0.3.*" }
partiql-logical = { path = "../partiql-logical", version = "0.3.*" }
partiql-value = { path = "../partiql-value", version = "0.3.*" }
partiql-eval = { path = "../partiql-eval", version = "0.3.*" }

ion-rs = "0.16"

regex = "1.7"
once_cell = "1"

rust_decimal = "1.27"

serde = { version = "1.*", features = ["derive"], optional = true }
serde_json = { version = "1.*", optional = true }

[features]
default = []
conformance_test=[]
report_tool = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
