[package]
name = "partiql-conformance-tests"
description = "PartiQL conformance test runner"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "conformance", "compilers", "tests"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[[bin]]
name = "generate_comparison_report"
required-features = ["report_tool"]
bench = false

[[bin]]
name = "generate_cts_report"
required-features = ["report_tool"]
bench = false

[build-dependencies]
miette = { version = "7", features = ["fancy"] }
partiql-conformance-test-generator = { path = "../partiql-conformance-test-generator", version = "0.11.*" }

[dependencies]
partiql-parser = { path = "../partiql-parser", version = "0.11.*" }
partiql-catalog = { path = "../partiql-catalog", version = "0.11.*" }
partiql-common = { path = "../partiql-common", version = "0.11.*" }
partiql-ast = { path = "../partiql-ast", version = "0.11.*" }
partiql-ast-passes = { path = "../partiql-ast-passes", version = "0.11.*" }
partiql-logical-planner = { path = "../partiql-logical-planner", version = "0.11.*" }
partiql-logical = { path = "../partiql-logical", version = "0.11.*" }
partiql-value = { path = "../partiql-value", version = "0.11.*" }
partiql-eval = { path = "../partiql-eval", version = "0.11.*" }
partiql-extension-ion = { path = "../extension/partiql-extension-ion", version = "0.11.*" }

ion-rs_old = { version = "0.18", package = "ion-rs" }

regex = "1.10"
once_cell = "1"

rust_decimal = "1.36"

thiserror = "1.0"

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["base"]
base = ["syntax", "semantics", "strict", "permissive"]
syntax = []
semantics = []
strict = []
permissive = []
experimental = []
conformance_test = []
report_tool = ["serde"]
test_pretty_print = []
serde = ["dep:serde", "dep:serde_json"]
