[package]
name = "partiql-eval-vectorized"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "partiql-metal-cli"
path = "src/bin/main.rs"

[dependencies]
indexmap = "2"
memmap2 = "0.9"
smallvec = "1.13"
wide = "0.7"
ion-rs = { version = "1.0.0-rc.11", features = ["experimental"] }
arrow = "53.0"
arrow-array = "53.0"
arrow-schema = "53.0"
parquet = "53.0"
partiql-logical = { path = "../partiql-logical" }
partiql-ast-passes = { path = "../partiql-ast-passes" }
partiql-catalog = { path = "../partiql-catalog" }
partiql-eval = { path = "../partiql-eval" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-parser = { path = "../partiql-parser" }
partiql-types = { path = "../partiql-types" }
partiql-value = { path = "../partiql-value" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
