[package]
name = "partiql-eval-vectorized"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "partiql-metal-cli"
path = "src/bin/main.rs"

[[bin]]
name = "generate-data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "partiql-vectorized"
path = "src/bin/partiql_vectorized.rs"

[[bin]]
name = "partiql-legacy"
path = "src/bin/partiql_legacy.rs"

[[bin]]
name = "partiql-comparison"
path = "src/bin/partiql_comparison.rs"

[dependencies]
indexmap = "2"
memmap2 = "0.9"
smallvec = "1.13"
wide = "0.7"
rustc-hash = "2.0"
ion-rs = "0.18.1"
arrow = "53.0"
arrow-array = "53.0"
arrow-buffer = "53.0"
arrow-ipc = "53.0"
arrow-schema = "53.0"
bytes = "1.9"
parquet = "53.0"
partiql-logical = { path = "../partiql-logical" }
partiql-ast-passes = { path = "../partiql-ast-passes" }
partiql-catalog = { path = "../partiql-catalog" }
partiql-eval = { path = "../partiql-eval" }
partiql-extension-ion = { path = "../extension/partiql-extension-ion" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-parser = { path = "../partiql-parser" }
partiql-types = { path = "../partiql-types" }
partiql-value = { path = "../partiql-value" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
