[package]
name = "partiql-eval"
description = "PartiQL Expression Evaluator"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-logical = { path = "../partiql-logical", version = "0.10.*" }
partiql-value = { path = "../partiql-value", version = "0.10.*" }
partiql-catalog = { path = "../partiql-catalog", version = "0.10.*" }
partiql-types = { path = "../partiql-types", version = "0.10.*" }
petgraph = "0.6"
ordered-float = "4"
itertools = "0.13"
unicase = "2"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
rust_decimal_macros = "1"
thiserror = "1"
assert_matches = "1"
regex = "1"
regex-syntax = "0.8"
rustc-hash = "2"
delegate = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_eval"
harness = false
