[package]
name = "partiql-eval"
description = "PartiQL Expression Evaluator"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.14.*" }
partiql-logical = { path = "../partiql-logical", version = "0.14.*" }
partiql-value = { path = "../partiql-value", version = "0.14.*" }
partiql-catalog = { path = "../partiql-catalog", version = "0.14.*" }
partiql-types = { path = "../partiql-types", version = "0.14.*" }
partiql-extension-ion = { path = "../extension/partiql-extension-ion", version = "0.14.*" }
ion-rs_old = { version = "0.18", package = "ion-rs" }
lasso = "0.7"
petgraph = "0.7"
indexmap = "2"
ordered-float = "5"
itertools = "0.14"
unicase = "2"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
rust_decimal_macros = "1"
thiserror = "1"
assert_matches = "1"
regex = "1"
regex-syntax = "0.8"
rustc-hash = "2"
delegate = "0.13"

serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1"

[dev-dependencies]
criterion = "0.5"
partiql-parser = { path = "../partiql-parser", version = "0.14.*" }
partiql-logical-planner = { path = "../partiql-logical-planner", version = "0.14.*" }


[features]
default = []
serde = [
    "dep:serde",
    "partiql-common/serde",
    "partiql-logical/serde",
    "partiql-value/serde",
    "partiql-extension-ion/serde",
    "rust_decimal/serde-with-str",
]

[[bench]]
name = "bench_eval"
harness = false

[profile.release]
debug = true
