[package]
name = "partiql-logical-planner"
description = "PartiQL Logical Planner"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-ast = { path = "../partiql-ast", version = "0.14.*" }
partiql-ast-passes = { path = "../partiql-ast-passes", version = "0.14.*" }
partiql-catalog = { path = "../partiql-catalog", version = "0.14.*" }
partiql-common = { path = "../partiql-common", version = "0.14.*" }
partiql-parser = { path = "../partiql-parser", version = "0.14.*" }
partiql-logical = { path = "../partiql-logical", version = "0.14.*" }
partiql-types = { path = "../partiql-types", version = "0.14.*" }
partiql-value = { path = "../partiql-value", version = "0.14.*" }

ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
indexmap = "2"
petgraph = "0.7"
num = "0.4"
fnv = "1"
assert_matches = "1"
once_cell = "1"
thiserror = "1"
rustc-hash = "2"

[dev-dependencies]
#partiql-eval = { path = "../partiql-eval", version = "0.12.*" }
partiql-types = { path = "../partiql-types", version = "0.14.*" }
