[package]
name = "partiql-logical"
description = "PartiQL Logical Model"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../partiql-value", version = "0.5.*" }
petgraph = "0.6.*"
ordered-float = "3.*"
itertools = "0.10.*"
unicase = "2.6"

serde = { version = "1.*", features = ["derive"], optional = true }

[features]
default = []
serde = [
  "dep:serde",
  "ordered-float/serde"
]
