[package]
name = "partiql-logical"
description = "PartiQL Logical Model"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../partiql-value", version = "0.11.*" }
partiql-common = { path = "../partiql-common", version = "0.11.*" }

ion-rs_old = { version = "0.18", package = "ion-rs" }
ordered-float = "5"
itertools = "0.14"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.36"
unicase = "2.7"
thiserror = "1"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = [
    "dep:serde",
    "partiql-common/serde",
    "partiql-value/serde",
    "ordered-float/serde",
]
